youfull/objects/ZM_Report_Translation__c.object
<CustomObject>
    <fields>
        <fullName>Application_Context__c</fullName>
        <label>Application Context</label>
        <picklist>
            <picklistValues>
                <fullName>Quick Links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Team Orders</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Is_Mail_Plan_Specific__c</fullName>
        <label>Is_Mail_Plan_Specific</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <label>Language Code</label>
        <picklist>
            <picklistValues>
                <fullName>en_PH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_GB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <description>To relate to the Market Object</description>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>ZM Report Market Translations</relationshipLabel>
        <relationshipName>ZM_Report_Market_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Id__c</fullName>
        <label>Market Id</label>
        <picklist>
            <picklistValues>
                <fullName>62</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Multi_zone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi-zone?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfColumnstoFreeze__c</fullName>
        <description>Define the number of columns to freeze with the jqgrid.</description>
        <inlineHelpText>Define the number of columns to freeze with the jqgrid.</inlineHelpText>
        <label>Freeze Column Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuickLinkHoverText__c</fullName>
        <description>This custom field stores the text that should be displayed when the user hovers over Quick Link represented by this ZM Market Translation record.</description>
        <label>QuickLinkHoverText</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Report_Id__c</fullName>
        <label>Report Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Label__c</fullName>
        <label>Report Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Role__c</fullName>
        <label>Report Role</label>
        <picklist>
            <picklistValues>
                <fullName>Zone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_URL__c</fullName>
        <label>Report URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>showParameters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If showParameters=false, hide the complete set of filters otherwise show filters.</description>
        <inlineHelpText>Check if report filters need to show.</inlineHelpText>
        <label>Show Parameters</label>
        <type>Checkbox</type>
    </fields>
    <label>ZM Report Market Translation</label>
    <nameField>
        <label>ZM Report Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZM Report Market Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Freeze_Column_Number_between_0_to_5</fullName>
        <active>true</active>
        <description>Ensure the value in Freeze Column Number field is between 0 and 5</description>
        <errorConditionFormula>OR(NumberOfColumnstoFreeze__c &lt; 0, NumberOfColumnstoFreeze__c &gt; 5)</errorConditionFormula>
        <errorDisplayField>NumberOfColumnstoFreeze__c</errorDisplayField>
        <errorMessage>Freeze Column Number should be between 0 to 5.</errorMessage>
    </validationRules>
</CustomObject>